# BenchmarkSuite

./: .gitignore  Benchmarks.md  CMakeLists.txt  CMakePresets.json  CitmCatalogData-Prettified.json  DiscordData-Prettified.json  FrozenMapTest.json  FrozenMapTest.md  GenerateGraphs.py  HashingTest.json  HashingTest.md  JsonData-Minified.json  JsonData-Prettified.json  License.md  ReadMe.md  Twitter-Defaults.hpp  TwitterData-Minified.json  TwitterData-Prettified.json  main-c.asm  main-cpp.asm  test_dead_code.ps1  test_struct_new02.hpp
Benchmark/: CMakeLists.txt  Core.hpp  JsonEntity.hpp  Jsonifier.hpp  RandomGenerators.hpp  main.c  main.cpp  main.cu
Benchmark/CPU-Arch/: CMakeLists.txt  arm_neon.hpp  arm_sve.hpp  avx.hpp  avx_2.hpp  avx_512.hpp  config.hpp  cpu_arch.cpp  cpu_arch.hpp  detect_isa.hpp
Benchmark/absl/algorithm/: BUILD.bazel  algorithm.h  algorithm_test.cc  container.h  container_test.cc
Benchmark/absl/base/: BUILD.bazel  attributes.h  bit_cast_test.cc  c_header_test.c  call_once.h  call_once_test.cc  casts.h  config.h  config_test.cc  const_init.h  dynamic_annotations.h  exception_safety_testing_test.cc  inline_variable_test.cc  inline_variable_test_a.cc  inline_variable_test_b.cc  invoke_test.cc  log_severity.cc  log_severity.h  log_severity_test.cc  macros.h  no_destructor.h  no_destructor_benchmark.cc  no_destructor_test.cc  nullability.h  nullability_default_nonnull_test.cc  nullability_test.cc  optimization.h  optimization_test.cc  options.h  policy_checks.h  port.h  prefetch.h  prefetch_test.cc  raw_logging_test.cc  spinlock_test_common.cc  thread_annotations.h  throw_delegate_test.cc
Benchmark/absl/cleanup/: BUILD.bazel  cleanup.h  cleanup_test.cc
Benchmark/absl/container/: BUILD.bazel  btree_benchmark.cc  btree_map.h  btree_set.h  btree_test.cc  btree_test.h  fixed_array.h  fixed_array_benchmark.cc  fixed_array_exception_safety_test.cc  fixed_array_test.cc  flat_hash_map.h  flat_hash_map_test.cc  flat_hash_set.h  flat_hash_set_test.cc  hash_container_defaults.h  inlined_vector.h  inlined_vector_benchmark.cc  inlined_vector_exception_safety_test.cc  inlined_vector_test.cc  node_hash_map.h  node_hash_map_test.cc  node_hash_set.h  node_hash_set_test.cc  sample_element_size_test.cc
Benchmark/absl/copts/: AbseilConfigureCopts.cmake  GENERATED_AbseilCopts.cmake  GENERATED_copts.bzl  configure_copts.bzl  copts.py  generate_copts.py
Benchmark/absl/crc/: BUILD.bazel  crc32c.cc  crc32c.h  crc32c_benchmark.cc  crc32c_test.cc
Benchmark/absl/debugging/: BUILD.bazel  failure_signal_handler.cc  failure_signal_handler.h  failure_signal_handler_test.cc  leak_check.cc  leak_check.h  leak_check_fail_test.cc  leak_check_test.cc  stacktrace.cc  stacktrace.h  stacktrace_benchmark.cc  stacktrace_test.cc  symbolize.cc  symbolize.h  symbolize_darwin.inc  symbolize_elf.inc  symbolize_emscripten.inc  symbolize_test.cc  symbolize_unimplemented.inc  symbolize_win32.inc
Benchmark/absl/flags/: BUILD.bazel  commandlineflag.cc  commandlineflag.h  commandlineflag_test.cc  config.h  config_test.cc  declare.h  flag.h  flag_benchmark.cc  flag_test.cc  flag_test_defs.cc  marshalling.cc  marshalling.h  marshalling_test.cc  parse.cc  parse.h  parse_test.cc  reflection.cc  reflection.h  reflection_test.cc  usage.cc  usage.h  usage_config.cc  usage_config.h  usage_config_test.cc
Benchmark/absl/functional/: BUILD.bazel  any_invocable.h  any_invocable_test.cc  bind_front.h  bind_front_test.cc  function_ref.h  function_ref_test.cc  function_type_benchmark.cc  overload.h  overload_test.cc
Benchmark/absl/hash/: BUILD.bazel  hash.h  hash_benchmark.cc  hash_instantiated_test.cc  hash_test.cc  hash_testing.h
Benchmark/absl/log/: BUILD.bazel  absl_check.h  absl_check_test.cc  absl_log.h  absl_log_basic_test.cc  absl_vlog_is_on.h  check.h  check_test.cc  check_test_impl.inc  die_if_null.cc  die_if_null.h  die_if_null_test.cc  flags.cc  flags.h  flags_test.cc  globals.cc  globals.h  globals_test.cc  initialize.cc  initialize.h  log.h  log_basic_test.cc  log_basic_test_impl.inc  log_benchmark.cc  log_entry.cc  log_entry.h  log_entry_test.cc  log_format_test.cc  log_macro_hygiene_test.cc  log_modifier_methods_test.cc  log_sink.cc  log_sink.h  log_sink_registry.h  log_sink_test.cc  log_streamer.h  log_streamer_test.cc  scoped_mock_log.cc  scoped_mock_log.h  scoped_mock_log_test.cc  stripping_test.cc  (+4 more)
Benchmark/absl/memory/: BUILD.bazel  memory.h  memory_test.cc
Benchmark/absl/meta/: BUILD.bazel  type_traits.h  type_traits_test.cc
Benchmark/absl/numeric/: BUILD.bazel  bits.h  bits_benchmark.cc  bits_test.cc  int128.cc  int128.h  int128_benchmark.cc  int128_stream_test.cc  int128_test.cc
Benchmark/absl/profiling/: BUILD.bazel
Benchmark/oiml/: .gitignore  CMakeLists (2).txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
StringComparison/: CMakeLists.txt  Canada.hpp  CitmCatalog.hpp  Derailleur_Backup.hpp  Discord.hpp  FastFloatNew-Backup.hpp  FastFloatNew.hpp  FastFloatOld.hpp  HashMap_Backup.hpp  HashTuple_Backup.hpp  Hash_Backup.hpp  Parse_Impl_Backup.hpp  Parser_Backup.hpp  Reflection_Backup.hpp  Serialize_Impl_Backup.hpp  Serializer_Backup.hpp  SimdDispatcher.hpp  StrToDNew.hpp  StrToDOld.hpp  TypeEntities_Backup.hpp  fast_float.h  fast_float_new.hpp  main.cpp  stoui64.hpp
StringComparison/Benchmarks/: benchmark.cpp
StringComparison/Tests/: Common.hpp  Conformance.hpp  ConformanceTests.hpp  FailTests.hpp  Float.hpp  Glaze.hpp  Int.hpp  Jsonifier.hpp  RoundTrip.hpp  Simdjson.hpp  String.hpp  Tests.hpp  Uint.hpp
StringComparison/fast_float/: fast_float.h
StringComparison/performancecounters/: apple_arm_events.h  event_counter.h  linux-perf-events.h
StringComparison/unordered_map/: Hash.hpp  HashTable.hpp  UnorderedMap.hpp  UnorderedSet.hpp
cmake/detection/: BenchmarkSuiteCpuProperties.hpp.in  BenchmarkSuiteDetectCpuProperties.cmake  CMakeLists.txt  benchmarksuite_cpu_properties.hpp.in  benchmarksuite_detect_cpu_properties.cmake  benchmarksuite_detect_gpu_properties.cmake  benchmarksuite_gpu_properties.hpp.in  main.cpp
src/: CMakeLists.txt  main.cpp  main.cu
(+3781 files in other folders)
